--- a/notes.tex
+++ b/notes.tex
@@ -36,6 +36,11 @@ SBFC Model \textbf{BUT} with the concept of "friend groups" introduced. The idea
   % \centering
 \end{figure}
 
+Before we begin to assimilate the concept, we assume the following about the new concept:
+\begin{enumerate}
+  \item The state, and amount of people of friend group stay the same all throughout the simulation
+\end{enumerate}
+
 As a result, the following parameters/variables are what I'll add:
 \begin{enumerate}
   \item percentage of the population to be in a friend group
@@ -44,7 +49,7 @@ As a result, the following parameters/variables are what I'll add:
   \item friends' influence
 \end{enumerate}
 
-\pagebreak
+% \pagebreak
 Let $h_i^{B|FC}$ return 1 if agent's friend group is $B|FC$ accordingly, otherwise 0.
 
 Let $g_i$ return $i's$ \# of group friends
