fix: consider not-in-friend-group cases

--- a/notes.tex
+++ b/notes.tex
@@ -74,7 +74,8 @@ the following:
   v_g = 
   \begin{cases} 
       1+\omega & \text{if}\ h_i^{FC} = 1 \\
-      1-\omega & \text{if}\ h_i^{FC} = 0 \\
+      1-\omega & \text{if}\ h_i^B = 1 \\
+      1 & \text{if}\ h_i^{FC} = h_i^B = 0 \\
   \end{cases}
 \]
 \[ p_v(i) = v_i\;v_g(i) \]
